--- a/configuration.properties
+++ b/configuration.properties
@@ -2,7 +2,7 @@
 #this file is used for project configuration
 #here, we specify browser type for all tests
 #urls, connections strings, credentials
-browser=firefoxheadless
+browser=chrome
 
 qa1=http://qa1.vytrack.com
 qa2=http://qa2.vytrack.com
@@ -12,4 +12,5 @@ color=red
 
 #CREDENTIALS
 store_manager=storemanager85
+driver=user19
 password=UserUser123
